Explain how to build HBase Better